# Project-std

./: .gitignore  CMakeLists.txt  Project_Std.sln  README.md
C++11/: C++11.cpp  C++11.vcxproj  C++11.vcxproj.filters  CMakeLists.txt  foo.h
C++14/: C++14.cpp  C++14.vcxproj  C++14.vcxproj.filters  CMakeLists.txt
C++17/: C++17.cpp  C++17.vcxproj  C++17.vcxproj.filters  CMakeLists.txt
C++20/: C++20.cpp  C++20.vcxproj  C++20.vcxproj.filters  CMakeLists.txt
DesignPattern/: CMakeLists.txt  CRTP.cpp  DependencyTest.cpp  DependencyTest2.cpp  Event.cpp  FactoryTest.cpp  InterfaceTest.cpp  MyPimpl.cpp  MyPimpl.h  MyPimpl2.cpp  MyPimpl2.h  MyPimpl3.cpp  MyPimpl3.h  MyPimpl3_ResourceManagement.cpp  Pimpl.cpp  Publisher.cpp  Singleton.cpp  StrategyTest.cpp  Test3.vcxproj  Test3.vcxproj.filters  handle.cpp  handle.h  main.cpp  observer.cpp  qt_signal_slot.hpp  qt_signal_slot_example.cpp  qt_static_connect_example.cpp  signaltest.cpp
MySTL/: CMakeLists.txt  MySTL.vcxproj  MySTL.vcxproj.filters
Project1/: CMakeLists.txt  Heaponly.cpp  Project1.vcxproj  Project1.vcxproj.filters  base.cpp  cast.cpp  concurrent_queue.cpp  function.cpp  operator.cpp  std-move.cpp  string.cpp  virtual.cpp
QueueTest/: QueueTest.vcxproj  QueueTest.vcxproj.filters  queue.h  queue2.c  queue2.h
STL_1/: CMakeLists.txt  STL_1.vcxproj  STL_1.vcxproj.filters  StlTest.cpp
Std1/: CMakeLists.txt  Std1.vcxproj  Std1.vcxproj.filters  advit.cpp  any_impl.cpp  apply.cpp  arr.cpp  arrrecognition.cpp  boolconv.cpp  catcher.cpp  cerr_stream.cpp  clone.cpp  compare.cpp  constmem.cpp  constprob.cpp  del_stack.cpp  (+40 more)
(+48 files in other folders)
