cmake_minimum_required(VERSION 3.10)
project(ProjectStd)

# 添加所有主要子目录
add_subdirectory(C++11)
add_subdirectory(C++14)
add_subdirectory(C++17)
add_subdirectory(C++20)
add_subdirectory(data-structure)
add_subdirectory(design-patterns)
add_subdirectory(DesignPattern)
add_subdirectory(MySTL)
add_subdirectory(Project1)
add_subdirectory(Std1)
add_subdirectory(STL_1)
add_subdirectory(Template_T)
add_subdirectory(thread1)

# 可根据实际情况增删子目录
